--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 		</div>
 	</div>
 </section>
-<section class="mobile" id="features">
+<section class="mobile" id="blog">
 	<div class="wrapper">
 		<div class="hand">
 			<img src="img/hand.png" alt="">
@@ -437,7 +437,7 @@
 		</div>
 	</div>
 </section>
-<section class="news">
+<section class="news" id="contact">
 	<div class="wrapper">
 		<div class="about-waxom">
 			<div class="about-head"><img src="img/logos.svg" alt="" class="logo__img">
@@ -491,7 +491,7 @@
 		</div>
 	</div>	
 </section>
-<section class="footer" id="contact">
+<section class="footer" >
 	<div class="wrapper">
 		<div class="copyright">
 			<ul>
@@ -510,9 +510,8 @@
 	</div>
 </section>
 </body>
-<script src="js/main.min.js"></script>
 <script>
 new WOW().init();
  </script>
-
+<script src="js/main.min.js"></script>
 </html>
