--- a/index.html
+++ b/index.html
@@ -510,7 +510,9 @@
 	</div>
 </section>
 </body>
+<script src="js/wow.min.js"></script> 
 <script>
+
 new WOW().init();
  </script>
 <script src="js/main.min.js"></script>
